# 007

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md  deny.toml  flake.nix
.github/workflows/: cockpit-slice-0-ui.yml  o7-worker-gate.yml  pr3-worktree-verifier-gate.yml  qodec-n2-miner-canary.yml  qodec-n2-miner-framework.yml  qodec-v2-corpus.yml  qodec-v2-public-log-pilot.yml  qodec-v2.yml
cockpit-slice-0/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
cockpit-slice-0/public/: manifest.webmanifest  service-worker.js
cockpit-slice-0/scripts/: offline-smoke.mjs  screenshot.mjs  serve-dist.mjs
cockpit-slice-0/src/: main.tsx  styles.css  sw-register.ts
cockpit-slice-0/src/app/: App.tsx  useCockpit.ts
cockpit-slice-0/src/components/: AgentBadge.tsx  Composer.tsx  ControlsPanel.tsx  ConversationList.tsx  ConversationScreen.tsx  RunGraph.tsx  StatusPill.tsx  Timeline.tsx  cockpit.test.tsx
cockpit-slice-0/src/data/: cockpit-data-source.test.ts  cockpit-data-source.ts  fold.test.ts  fold.ts
cockpit-slice-0/src/fixtures/: catalog.ts
cockpit-slice-0/src/types/: jest-axe.d.ts  testing-shims.d.ts  ui-fixture-events.ts  ui-view-model.ts
crates/o7-ledger/: Cargo.toml
crates/o7-ledger/src/: idempotency.rs  ids.rs  lib.rs  migrations.rs  models.rs  recovery.rs  sqlite.rs  transitions.rs
crates/o7-ledger/tests/: append_replay.rs  attempt_lifecycle.rs  concurrency.rs  crash_durability.rs  idempotency.rs  integrity.rs  migrations.rs  recovery.rs
crates/o7-verifier/: Cargo.toml
crates/o7-verifier/src/: command.rs  evidence.rs  lib.rs  runner.rs  trust.rs  verdict.rs
crates/o7-verifier/tests/: run.rs  trust_and_verdict.rs
crates/o7-verifier/tests/common/: mod.rs
crates/o7-worker/: Cargo.toml
crates/o7-worker/src/: boundary.rs  cancellation.rs  heartbeat.rs  host_boundary.rs  lib.rs  observation.rs  output.rs  process_identity.rs  spec.rs  state.rs  supervisor.rs
crates/o7-worker/tests/: boundary_policy.rs  cancellation.rs  contract_wait_cancel_safety.rs  environment.rs  fault_bounded_ops.rs  fault_cancel_sink.rs  fault_cleanup.rs  fault_combined_teardown.rs  fault_drain.rs  fault_drain_backpressure.rs  fault_drain_membership.rs  fault_drain_pending.rs  fault_drain_sink.rs  fault_force_stop_sink.rs  fault_graceful.rs  fault_output.rs  fault_reap.rs  fault_spawn.rs  fault_spawned_sink.rs  fault_supervisor_failed.rs  force_cancel.rs  heartbeat.rs  orphan_cleanup.rs  output_streaming.rs  process_group.rs  races.rs  sink_failure.rs  sink_terminal.rs  spawn_exit.rs  spec_validation.rs
crates/o7-worker/tests/common/: mock.rs  mod.rs
crates/o7-worktree/: Cargo.toml
crates/o7-worktree/src/: attest.rs  git.rs  identity.rs  lib.rs  materialize.rs  reap.rs  stateroot.rs  store.rs  worktree.rs
crates/o7-worktree/tests/: durable.rs  reap.rs  stateroot.rs  stateroot_temp.rs  substrate.rs
crates/o7-worktree/tests/support/: mod.rs
docs/: CFR.md  actions plans evidence abridge.md  actions-plans-evidence-abridge.md  agent-behavior-profiling.md  agent-language.md  agent-memory-layer.md  agent-papers-backlog-2026.md  agentic-coding-discipline-proposal.md  agentops-promptops.md  agents-outputs-budgeter.md  architecture-refactoring-task.md  fastcontext.md  koma-agent-inspiration.md  loop-canvas.md  microvm-isolation.md  o7-invoke.md  omnigraph.md  opencode-postmortem.md  paper-transplant-map.md  performance.md  public-governance.md  qodec-cleanup-record.json  qodec-migrated.md  reflect.md  security-layers.md  sketch-aware-evidence.md  task-aware-context-generator.md  token-codec.md  verification.md  workflow-scripting.md  zero-trust-framework.md
docs/architecture/: ledger-durability.md  ledger-schema-v1.md  process-boundary.md  worker-lifecycle.md
docs/research/: consilium-phase-minus-one.md
docs/ui/: cockpit-slice-0.md
evidence/phase-minus-one/: 007-current-state.md  README.md  commands.ndjson  consilium-module-map.md  environment.json  event-mapping.json  final-state.txt  identities.json  mcp-assessment.md  open-questions.md  operator-decision.md  reuse-matrix.json  roadmap-delta.md  rungraph-divergence.md  security-boundaries.md  strategy-comparison.md  test-results.json  web-ui-assessment.md  worktree-safety.md  zero-quota-e2e.md
evidence/phase-minus-one/raw/: claude-probe.redacted.json  stageB-summary.txt  versions.txt
examples/: gate.own.net.toml  task.example.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: extract_json_array.rs  findings_json.rs  gate_toml.rs
judge/: README.md  build-proof.sh  fp-verdicts.schema.json  prompt.template.md  rubric.example.md
judge/fixtures/sts-stub/: README.md  findings.json  proof.sh
judge/fixtures/sts-stub/Services/: QuoteService.cs
judge/fixtures/sts-stub/ViewModels/: CleanViewModel.cs  EventLeakViewModel.cs  MixedViewModel.cs  TimerLeakViewModel.cs
qodec/: README.md
src/: agent.rs  gate.rs  invoke.rs  judge.rs  lib.rs  main.rs  record.rs  sandbox.rs  verdict.rs  worktree.rs
tools/: verify_qodec_cleanup_record.py
