# 007 is now a workspace: the existing `o7` CLI stays the root package; new
# foundation crates live under `crates/`. The ledger (durable source of truth)
# is a SEPARATE crate — it must not be hidden inside the CLI crate.
# `fuzz/` is excluded so cargo-fuzz keeps managing it independently.
[workspace]
members = ["crates/o7-ledger", "crates/o7-worker"]
exclude = ["fuzz"]
resolver = "2"

[package]
name = "o7"
version = "0.1.0"
edition = "2021"
description = "007 — personal harness: one isolated, gated agent run over a target repo"
publish = false

[[bin]]
name = "o7"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
sha1 = "0.10"
sha2 = "0.10"
# `invoke.rs` only: independently re-validates a backend's structured output
# against a caller-supplied JSON Schema. Default features pull in `reqwest`
# (remote $ref resolution) -- explicitly off: a schema-validating primitive
# must not gain a network path from a dependency default, especially one
# fed an arbitrary caller-supplied schema file. `cargo deny check` run
# against this addition: one new license to allow (`borrow-or-share` is
# MIT-0, strictly more permissive than plain MIT -- added to deny.toml),
# advisories/bans/sources all clean.
jsonschema = { version = "0.47", default-features = false }

# `invoke.rs` timeout path only (unix): SIGKILL the backend's WHOLE process
# group, not just the direct child, so a descendant still holding the stdout/
# stderr pipe can't keep the reader threads (and thus the "timeout" itself)
# blocked forever. `nix::sys::signal::killpg` is used because the tree forbids
# `unsafe` (`[lints.rust] unsafe_code = "forbid"`) and nix wraps the raw
# syscall in a safe API. Unix-only by construction -- 007 runs on WSL2/Linux;
# a Windows Job Object equivalent is explicitly out of scope. `nix` is MIT
# (allowed in deny.toml); it pulls only bitflags/cfg-if/libc, all permissive.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

# Lints. Curated to pass `clippy --all-targets -D warnings` clean on today's code
# (ratchet, not a blast): the broad pedantic/nursery families are deliberately
# left off — see docs/verification.md for the tracked follow-ups.
[lints.rust]
# `kani` is a cfg set by `cargo kani`; register it so stable builds don't warn.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
unsafe_code = "forbid"        # no unsafe in the tree; lock that invariant in
unreachable_pub = "deny"      # a `pub` nothing can reach is a lie in the API
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
# Restriction lints that are already clean here — keep the discipline enforced.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"     # panic-on-index; the two proven-safe slices carry a justified #[allow]

[dev-dependencies]
proptest = "1"

[profile.release]
strip = true
